--- a/程序设计语言.md
+++ b/程序设计语言.md
@@ -51,6 +51,12 @@ P	产生式	用终结符替代非终结符的规则 ,如a->b
 
 
 
+<img src="image.assets/image-20200827230031243.png" alt="image-20200827230031243" style="zoom:200%;" />
+
+
+
+
+
 # 语法推导树
 
 推导树以S起始符为根结点
