--- a/算法与数据结构.md
+++ b/算法与数据结构.md
@@ -40,6 +40,158 @@
 
 
 
+# 线性表
+
+
+
+* 顺序表
+
+* 单链表
+
+* 循环链表
+
+* 双向链表
+
+![image-20200831160443138](image.assets/image-20200831160443138.png)
+
+
+
+## 队列/栈
+
+
+
+* 循环队列     
+
+  ​    当head=tail时 ,队空		当(tail+1)%总长=head  需要取模
+
+
+
+## 广义表
+
+由n个表组成的有限序列
+
+例如LS1=( a ,(b,c) ,(d,e) )
+
+深度指的是括号的层数
+
+
+
+取值 head ( LS1 ) =a
+
+tail ( LS1 ) = (b,c) ,(d,e)
+
+ head( head ( tail ( LS1) ) )
+
+
+
+
+
+# 树
+
+
+
+![image-20200831175430899](image.assets/image-20200831175430899.png)
+
+* 度	树的分叉
+
+
+
+任意二叉树 ,叶子结点共x个 ,度为2的结点共y个 ,则x=y+1
+
+![](image.assets/QQ拼音截图20200831192311.png)
+
+
+
+## 遍历
+
+  从上到下 ,从左到右
+
+* 前序    12457836
+* 中序    42785136
+* 后序    48752631
+
+
+
+## 查找二叉树
+
+**左孩子小于根	右孩子大于根**
+
+
+
+* 插入结点时
+
+结点已存在 ,不插入
+
+插入结点与父结点比较 ,就能知道在左还是右
+
+* 删除结点时
+
+被删除结点只有一个孩子 ,直接替换掉被删除节点的位置
+
+有2个孩子 ,在被删除结点的**左子树中序遍历**找到最大值 ,替换被删除结点
+
+
+
+## 哈夫曼树
+
+![image-20200831212542895](image.assets/image-20200831212542895.png)
+
+**8的值相同 ,被放在了右子树**
+
+
+
+## 线索二叉树
+
+![](image.assets/线索二叉树.png)
+
+线索二叉树记录了结点的前驱和后继	类似于双向循环链表
+
+
+
+## 平衡二叉树
+
+
+
+
+
+
+
+## 反向构造二叉树
+
+必须有中序遍历才能反向构造
+
+
+
+前序 ABHFDECG	中序HBEDFAGC
+
+![image-20200831194203229](image.assets/image-20200831194203229.png)
+
+![](image.assets/树构造.png)
+
+
+
+## 树转二叉树
+
+<img src="image.assets/image-20200831210534091.png" alt="image-20200831210534091" style="zoom: 50%;" />
+
+<img src="image.assets/二叉树.png" style="zoom:50%;" />
+
+孩子结点 -> 左子树		兄弟结点 -> 右孩子
+
+上层和下层的连线只保留最左边 ,下层互相连接
+
+最后旋转45度 ,得到答案
+
+
+
+
+
+
+
+
+
+
+
 
 
 
