--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -40,15 +40,41 @@
 
 
 
+**原/反 有-0**			补/移只没有-0
+
+
+
+# 数值表示范围
+
+![image-20200831111344389](image.assets/image-20200831111344389.png)
+
+小数点不占位数	
+
+**补码和移码没有-0 只有0**
+
+
+
+## 浮点数
+
+N = 尾数*基数^阶码
+
+
+
+**尾数用补码	阶码用移码**
+
+**小数向大数看齐** ,小数尾数右移
+
+
+
+对阶 -> 尾数计算 -> 结果格式化
+
+| 阶符 | 阶码 | 数符 | 尾数 |
+| ---- | ---- | ---- | ---- |
+|      |      |      |      |
 
 
 
 
-
-
-
-
-**原/反 有-0**			**+-0的 补/移相同**
 
 
 
