--- a/软件开发.md
+++ b/软件开发.md
@@ -273,6 +273,165 @@
 
 
 
+# 开发方法
+
+
+
+* 结构化方法	**面向数据流**  用数据流图描述
+  * 用户至上
+  * 严格区分工作阶段 ,每阶段有任务和结果
+  * 强调系统开发过程的整体性和全局性
+  * 系统开发过程工程化 ,文档资料标准化
+  * **自顶向下 ,逐步分解** (精益求精)
+  * **不适用于大型软件**
+
+* 原型法
+* 面向数据结构    Jackson
+
+
+
+* 面向对象方法    喷泉
+  * 更好的复用性
+  * 建立全面 ,合理 ,统一的模型
+  * 分析 ,设计 ,实现三个阶段的界限不明确
+
+
+
+* 面向服务方法SOA
+  * 
+
+
+
+# 需求分析
+
+![image-20200830210531808](image.assets/image-20200830210531808.png)
+
+
+
+
+
+
+
+
+
+# 软件设计
+
+![image-20200830211432909](image.assets/image-20200830211432909.png)
+
+
+
+![image-20200830212132855](image.assets/image-20200830212132855.png)
+
+* 内聚 高->低
+
+功能 > 信息 > 通信 > 过程 > 时间/瞬时 > 逻辑 > 巧合/偶然
+
+
+
+顺序内聚按顺序	**过程内聚按特定的顺序**
+
+
+
+* 耦合 高->低
+
+内容 > 公共 > 外部 > 控制 > 标记 > 数据 > 非直接
+
+
+
+模块**被调用的次数越多 ,说明这个模块越独立**
+
+
+
+### 应用工具
+
+IPO图	输入处理输出图
+
+PDL		程序描述语言(伪代码)
+
+PAD		问题分析图
+
+程序流程图	
+
+N/S盒图					
+
+
+
+PAD ,程序流程图 ,N/S盒图	三者可以互相转化 ,都用于分析问题
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
