--- a/程序设计语言+软件开发.md
+++ b/程序设计语言+软件开发.md
@@ -1,3 +1,242 @@
+# 解释与编译
+
+* **解释程序和源程序要参与到程序的运行**过程中，运行程序的控制权在解释程序。解释器翻译源程序时不产生独立的目标程序 ,如html,python
+
+* 编译:  运行的是与源程序等价的目标程序，源程序和编译程序都**不再参与**目标程序的执行过程；
+
+
+
+* 词法:    非法字符/关键字/变量是否被定义或声明
+
+* 语法:    语法结构,if endif不匹配
+
+* 语义     动态语义:死循环/逻辑错误 ,强制转换
+
+  ​			静态语义 ,a/b ,b=0
+
+![image-20200823214449647](image.assets/image-20200823214449647.png)
+
+
+
+# 文法
+
+
+
+
+
+有序四元组G=(V ,T ,S ,P)
+
+V	非终结符 ,类似于占位符 ,不是语言组成部分 ,不是最终结果
+
+T	终结符	是最终结果	V交T =空集
+
+S	起始符	语言的开始符号
+
+P	产生式	用终结符替代非终结符的规则 ,如a->b
+
+
+
+* 闭包			A+	1~n个a的并集
+* 正则闭包	A*	0~n个a的并集
+
+![](image.assets/文法类型.png)
+
+0型 短语文法         ->图灵机
+
+1型 上下文有关文法->线性界线自动机
+
+2             无关     ->非确定的下推自动机
+
+3    正规文法          ->有限自动机
+
+
+
+
+
+设某语言的语法规则用上下文无关文法G=(N，T，P，S)表示，其中N是非终结符号的集合，T是终结符号的集合，P是产生式集合，S是开始符号，令V=NUT,那么符合该语言的句子是（50)。
+
+(50)A.从S出发推导的、仅包含T中符号的符号串
+
+B.从N中符号出发推导的、仅包含T中符号的符号串	
+
+C.从S出发推导的、包含V中符号的符号串
+
+ 	D.从N中符号出发推导的、包含V中符号的符号串
+
+***\*【答案】A\****
+
+***\*【解析】本题考査程序语言方面的基础知识。\****
+
+一个文法的语言是该文法能产生的句子的集合。一个文法产生的句子是从文法开始符号出发推导出的所有终结符号串。
+
+
+
+
+
+
+
+
+
+# 语法推导树
+
+推导树以S起始符为根结点
+
+每个结点都有一个标记 ,此标记是V的一个符号
+
+
+
+![image-20200823220759230](image.assets/image-20200823220759230.png)
+
+由题得S->Aas     S->a      A->SbA   A->SS    A->ba
+
+**V=a,b 非终结符	T=S,A 终结符**	
+
+开始推导
+
+S->aAS,又因为A->SbA,所以S->a(SbA)S
+
+又因为S->a,所以S-> a(abA)a->aabAa
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 有限自动机 (词法分析)
+
+![image-20200823222142148](image.assets/image-20200823222142148.png)
+
+能用闭包等符号表示出来的是**确定的有限自动机**
+
+
+
+
+
+
+
+# 正规式
+
+![image-20200823222524296](image.assets/image-20200823222524296.png)
+
+
+
+# 数据类型与程序控制结构
+
+
+
+顺序结构	选择结构	循环结构
+
+
+
+# 后缀表达式
+
+转化为二叉树 ,再后序遍历
+
+![image-20200823224059841](image.assets/image-20200823224059841.png)
+
+
+
+# 传值 传址
+
+形参为*a时 ,代表传址
+
+
+
+# 各种程序语言特点
+
+![image-20200823230756007](image.assets/image-20200823230756007.png)
+
+c语言   编译型   全局/静态局部/静态全局变量都放在静态数据存储区
+
+**php 动态网页     不是标记语言**
+
+
+
+标记语言常用于描述格式化和链接
+
+脚本语言采用解释方式实现,代表一套与程序设计语言不同的协议,牺牲执行速度和与程序设计语言相关的类型长度而提供更高的编程创作能力和软件复用,脚本语言都是动态语言,动态语言都是解释性语言
+
+编译性语言的执行效率更高
+
+ 
+
+动态语言:在程序运行时可以改变结构,新的函数被引进,已有的函数被删除等等.动态语言的类型检查在运行时进行,能够方便阅读,不需要写很多与类型相关的代码,缺点是不方便调试,命名不规范时会读不懂
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # 开发模型
 
 
@@ -127,7 +366,15 @@
 
 # 敏捷方法
 
+
+
+敏捷方法中，**重构是**一种重新组织技术，重新审视需求和设计，重新明确地描述它们以符合新的和现有的需求，可以**简化构件的设计而无需改变其功能或行为**
+
+
+
 ![image-20200828141616442](image.assets/image-20200828141616442.png)
+
+
 
 
 
@@ -362,63 +609,163 @@ PAD ,程序流程图 ,N/S盒图	三者可以互相转化 ,都用于分析问题
 
 
 
+# 软件维护
 
 
 
+可理解性 ( 文档 )
+
+可测试性
+
+可修改性
 
 
 
+## 维护类型
 
 
 
+改正性维护	25%	改正系统发布前的问题
+
+适应性维护	20%	环境发生变化 ,进行适应环境的修改
+
+预防性维护	5%		
+
+**完善性维护**	50%	扩充功能 ,改善性能
 
 
 
+## 文档分类
 
 
 
+* 开发文档
+  * 可行性研究和项目任务书
+  * 需求规格说明
+  * 功能规格说明
+  * 设计规格说明 ( 包括程序和数据规格说明)
+  * 开发计划
+  * 软件集成和测试计划
+  * 质量保证计划,标准 ,进度
+  * 安全和测试信息
+
+* 产品文档
+  * 培训手册
+  * 参考手册和用户指南
+  * 软件支持手册
+  * 产品手册和信息广告
+
+* 管理文档
+  * 开发过程的每个**阶段的进度和进度变更的记录**
+  * 软件变更情况的记录
+  * 相对与开发的判定记录
+  * 职责定义
 
 
 
+## 质量保证
 
 
 
+* 功能性
+  * 适合性
+  * 准确性
+  * 互操作性
+  * 安全保密性
+  * 功能性的依从性
+
+* 可靠性
+  * 成熟性
+  * 容错性
+  * 易恢复性
+  * 可靠性的依从性
+
+* 易用性
+  * 易理解性
+  * 易学性
+  * 易操作性
+  * 吸引性
+  * 易用性的依从性
+
+* 效率
+  * 时间特性
+  * 资源利用性
+  * 效率依从性
+
+* 维护性
+  * 易分析性
+  * 易改变性
+  * 稳定性
+  * 易测试性
+  * 维护性的依从性
+
+* 可移植性
+  * 适应性
+  * 易安装性
+  * 共存性
+  * 易替换性
+  * 可移植的依从性
 
 
 
+## 过程改进	软件成熟度CMMI
+
+* 初始级
+
+* 可管理级	纪律化的过程
+
+* 已定义级	标准一致的过程
+
+* 定量管理级	可预测的过程
+
+* 优化管理级	不断改进
 
 
 
+# 项目管理	十大知识领域
+
+* 范围管理
+* **时间管理**
+* 成本管理
+* 质量管理
+* 人力资源管理
+* 沟通管理
+* 风险管理
+* 采购管理
+* 整体管理
+* 项目干系人管理
 
 
 
+## 横道图 (甘特图)
 
 
 
+![image-20200903220346675](image.assets/image-20200903220346675.png)
+
+粗线条代表计划		细线条代表实际
 
 
 
+## 关键路径
+
+![](image.assets/PDM.png)
 
 
 
+## 双代号网络图 ADM
+
+![image-20200903221403126](image.assets/image-20200903221403126.png)
 
 
 
+虚线代表虚工作 ,不占用时间和资源 ,只表示制约关系
 
 
 
+## 风险
 
-
-
-
-
-
-
-
-
-
-
-
+风险曝光度 = 风险概率 * 损失
 
 
 
