--- a/算法与数据结构.md
+++ b/算法与数据结构.md
@@ -202,6 +202,112 @@ tail ( LS1 ) = (b,c) ,(d,e)
 
 
 
+# 栈
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 队列
+
+
+
+单向循环链表可以表示队列
+
+
+
+一个线性序列经过队列结构后只能得到与原序列相同的元素序列，
+
+而经过一个栈结构后则可以得到多种元素序列。
+
+所以**两个栈可以模拟一个队列的入队和出队**
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 图
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+下面关于图（网）的叙述，正确的是（58)。
+
+ (58)A.连通无向网的最小生成树中，顶点数恰好比边数多1
+
+B.若有向图是强连通的，则其边数至少是顶点数的2倍
+
+C.可以采用AOV网估算工程的工期
+
+D.关键路径是AOE网中源点至汇点的最短路径
+
+***\*【答案】\*******\*A\****
+
+***\*【解析】本题考查数据结构方面的基础知识。\****
+
+在有向图中，若以顶点表示活动，用有向边表示活动之间的优先关系，则称这样的有向图为以顶点表示活动的网（Activity On Vertex Network, AOV网）。
+
+若在带权有向图G中以顶点表示事件，以有向边表示活动，边上的权值表示该活动持续的时间，则这种带权有向图称为用边表示活动的网（Activity On Edge Network, AOE 网）通常在AOE网中列出了完成预定工程计划所需进行的活动、每项活动的计划完成时间、要发生哪些事件以及这些事件和活动间的关系，从而可以分析该项工程是否实际可行并估计工程完成的最短时间，分析出哪些活动是影响工程进度的关键。进一步可以进行人力、物力的调度和分配，以达到缩短工期的目的。
+
+根据生成树的定义，有n个顶点的连通图的生成树中恰好有n-1条边。
+
+
+
+
+
+
+
 
 
 
@@ -216,7 +322,9 @@ tail ( LS1 ) = (b,c) ,(d,e)
 
 
 
-二分查找 ,斐波那契 ,归并/快速排序 ,矩阵乘法 ,大整数乘法,汉诺伊塔
+二分查找 ,斐波那契 ,**归并/快速排序** ,矩阵乘法 ,大整数乘法,汉诺伊塔
+
+**归并排序不是归纳法!!!!!!!!!!**
 
 
 
