--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -26,7 +26,7 @@
 
 * 正数 
 
-原反补相同
+**原反补相同**
 
 
 
@@ -40,7 +40,15 @@
 
 
 
-**原/反 有-0**			补/移只没有-0
+**原/反 有-0**			**补/移只没有-0**
+
+
+
+## 海明校验码
+
+​	2k-1>=n+k
+
+
 
 
 
@@ -189,23 +197,39 @@ N = 尾数*基数^阶码
 
 * 循环扫描 CSCAN    从最里到最外后 ,直接返回最里 ,是单边的循环
 
+先来先服务和最短寻道时间可能随时改变移动臂的方向
+
 
 
 读取数据时间 = 找磁道 +找扇区 + 传输时间
 
 
 
+## 存储器
+
+
+
+存储器按所处的位置可分为内存和外存。
+
+按构成存储器的材料可分为磁存储器、半导体存储器和光存储器。
+
+按存储器的工作方式可分为读写存储器和只读存储器。
+
+按访问方式可分为按地址访问和按内容访问的存储器。
+
+按寻址方式可分为随机存储器、顺序存储器和直接存储器。
+
+相联存储器是一种按内容访问的存储器。
 
 
 
 
 
+# 总线
 
 
 
-
-
-
+包括数据总线、地址总线、控制总线
 
 
 
@@ -340,37 +364,71 @@ P(S2)申请产品进行消费		V(S1)唤醒生产
 
  
 
+# 作业 
+
+## 4个状态
+
+![](image.assets/作业.png)
+
+提交	后备	执行	完成
 
 
 
+## 调度算法
+
+* 先来先服务
+* 时间片轮转
+* 短作业优先
+* 最高优先权优先
+* 高响应比优先      响应比=作业等待时间/执行时间
 
 
 
+# 文件管理
 
 
 
+## 索引文件结构
+
+![](image.assets/索引文件结构.png)
 
 
 
+0-9 直接索引 ,存储10kb
+
+10 一级索引 ,4b一索引 ,存储256kb
+
+11 二级索引 ,存储256*256=64Mb
+
+![image-20200903224242745](image.assets/image-20200903224242745.png)
+
+地址按顺序存储
 
 
 
+# 设备管理
 
 
 
+## 数据传输控制方式
+
+* 程序控制(查询)	分为无条件传送和程序查询2种 ,方法简单 ,**硬件开销少** ,但**IO能力低** ,影响cpu利用率
+
+* 程序中断	cpu无需等待 ,提高传世请求的响应速度
+
+* **DMA**	在主存和外设之间实现高速 ,批量数据交换而设置 ,DMA与CPU无关
+
+* 通道方式
+
+* IO处理机
+
+从上到下效率递增
 
 
 
+## 虚设备与SPOOLING假脱机技术
 
-
-
-
-
-
-
-
-
-
+SPOOLING是关于慢速字符设备如何与计算机主机交换信息的一种技术 ,通过**磁盘**实现
 
 
 
