--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -328,15 +328,18 @@ public interface Collection<E> extends Iterable<E> {
 
 ![image-20200828171527248](image.assets/image-20200828171527248.png)
 
-* 依赖    事物变化影响另一事物
+* 依赖    事物变化影响另一事物    如类A的方法中仅仅使用了类B的对象
 * 泛化    特殊/一般关系    **a可以完成b同样的任务 ,并能补充额外的角色功能**
 * 关联    
-* 聚合    整体没了 ,部分没了
-* 组合    整体没了部分还在
+* 聚合    
+* **组合    相同生命周期**
 * 实现    接口和类的关系
 
 
 
+include	
+
+extend	执行一个用例 ,在需要时转向另一个用例 ,**执行完再返回**之前的用例
 
 
 
@@ -344,6 +347,9 @@ public interface Collection<E> extends Iterable<E> {
 
 
 
+![image-20200906183533975](image.assets/image-20200906183533975.png)
+
+表示组件AccountManagement需要调用CreditCardServices组件和Logger 组件分别实现的Identity Verifier 接口和TransactionLogger 接口。
 
 
 
