--- a/算法与数据结构.md
+++ b/算法与数据结构.md
@@ -140,6 +140,20 @@ tail ( LS1 ) = (b,c) ,(d,e)
 
 
 
+假设某消息中只包含7个字符怡{a,b,c,d,e,f,g}，折7个字符在消息中出现的次数为{5,24,8,17,34,f4,13}，利用哈夫曼树（最优二叉树）为该消息中的字符构造符合前缀编码要求的不等长编码。各字符的编码长度分别为（A）。
+
+A.a:4,b:2,c:3,d:3,e:2,f:4,g:3      B.a:6,b:2,c:5,d:3,e:1,f:6,g:4
+
+C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
+
+![image-20200909081813745](image.assets/image-20200909081813745.png)
+
+
+
+
+
+
+
 ## 线索二叉树
 
 ![](image.assets/线索二叉树.png)
@@ -373,6 +387,20 @@ N皇后 ,迷宫 ,背包
 
 
 nlog2n	**堆排序**
+
+
+
+
+
+现需要对一个基本有序的数组进行排序。此时最适宜采用的算法为（A），时间复杂度为（A）。
+
+(64)A.插入       B.快速       C.归并       D.堆
+
+(65)A.O(n)       B.O(nlgn)      C.O(n²)       D.O(n²lgn)
+
+插入排序对基本有序的数组排序速度快；插入排序的时间复杂度都是O(n)
+
+
 
 
 
