--- a/计算机网络.md
+++ b/计算机网络.md
@@ -422,11 +422,15 @@ bgcolor	文档整体背景颜色
 
 ​		重放
 
+* 会话拦截
+
 
 
 被动攻击	主要用**监听/分析**来获取数据
 
-​		消息内容获取	业务流分析
+		* 消息内容获取	
+		* 业务流分析
+		* 系统干涉
 
 
 
@@ -449,6 +453,22 @@ bgcolor	文档整体背景颜色
 ​		屏蔽主机	外网->屏蔽路由器->堡垒主机->内网
 
 ​		**屏蔽子网** 	在外网与内网之间加入了**DMZ**
+
+
+
+
+
+## 入侵检测技术
+
+
+
+* 专家系统
+* 模型检测
+* 简单匹配
+
+
+
+**漏洞扫描是另一种安全防护策略**
 
 
 
