--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -46,13 +46,19 @@
 
 ## 海明校验码
 
-​	2k-1>=n+k
+奇偶校验 ,检错 ,**纠错**
+
+在数据位后面增加一些比特 ,检验数据有效性
+
+**1个以上的校验位**
+
+​	2k-1>=n+k	k海明码个数 ,n数据位个数
 
 
 
 
 
-# 数值表示范围
+## 数值表示范围
 
 ![image-20200831111344389](image.assets/image-20200831111344389.png)
 
@@ -90,8 +96,6 @@ N = 尾数*基数^阶码
 
 # 存储管理
 
-
-
 ## 页式存储
 
 
@@ -110,7 +114,22 @@ N = 尾数*基数^阶码
 
 * 缺点	最后一页的零头无法被充分利用 ,增加系统开销 ,需要频繁调进调出 ,造成抖动现象
 
-  
+
+
+
+采用分页存储管理方式，下图给出了进程A和进程B的页表结构。如果物理页的大小为1K字节，那么进程A中逻辑地址为1024 (十进制)用变量存放在（3）号物理内存页中。
+
+![image-20200908121812016](image.assets/image-20200908121812016.png)
+
+
+
+
+
+
+
+
+
+
 
 ![image-20200829112508035](image.assets/image-20200829112508035.png)
 
@@ -237,6 +256,29 @@ N = 尾数*基数^阶码
 
 
 
+# DRAM / SRAM
+
+
+
+DRAM（Dynamic Random Access Memory），即动态[随机存取存储器](https://baike.baidu.com/item/随机存取存储器)，最为常见的[系统内存](https://baike.baidu.com/item/系统内存)。
+
+SRAM（Static Random Access Memory），即静态随机存取存储器。它是一种具有静止存取功能的内存，不需要刷新电路即能保存它内部存储的数据。
+
+Caché，是 一种后关系型数据库。能并发访问同一数据的数据库技术。
+
+EEPROM (Electrically Erasable Programmable read only memory)，[电可擦可编程只读存储器](https://baike.baidu.com/item/电可擦可编程只读存储器)--一种掉电后数据不丢失的[存储芯片](https://baike.baidu.com/item/存储芯片)。 EEPROM 可以在电脑上或专用设备上擦除已有信息，重新编程。一般用在即插即用。
+
+
+
+# 程序查询方式
+
+程序查询方式是通过**CPU执行程序**来查询状态的。 
+
+DMA(Direct Memory Access，直接内存存取)，允许**不同速度**的硬件装置来沟通，而不需要依赖于 CPU 的大量中断负载。否则，CPU 需要从来源把每一片段的资料复制到[暂存器](https://baike.baidu.com/item/暂存器)，然后把它们再次写回到新的地方。在这个时间中，CPU 对于其他的工作来说就无法使用。
+
+
+
+# 计算机结构
 
 
 
@@ -244,14 +286,11 @@ N = 尾数*基数^阶码
 
 
 
+由控制器 ,运算器 ,存储器 ,输入 ,输出设备组成
 
 
 
-
-
-
-
-
+控制器由
 
 
 
