--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -68,11 +68,21 @@ public interface Collection<E> extends Iterable<E> {
 
 
 
+## 原型 Prototype
+
+将一个对象作为原型，通过对其进行复制而**克隆**出多个和原型类似的新实例
+
+![image-20200907093143342](image.assets/image-20200907093143342.png)
 
 
 
+Prototype抽象原型类
 
-# 单例模式
+ConcretePrototype具体原型类 ,实现具体的克隆方法
+
+
+
+## 单例模式
 
 确保一个类只有一个实例,并且自行实例化并向整个系统提供这个实例
 
@@ -82,16 +92,14 @@ public interface Collection<E> extends Iterable<E> {
 
 
 
-## 单例模式可能不只一个实例
+**单例模式可能不只一个实例**
 
 * 分布式系统中 ,多个jvm各自有一个实例
 * 一个jvm , 使用了多个类加载器同时加载这个类 ,产生多个实例
 
 
 
-
-
-## 饿汉单例
+### 饿汉单例
 
 在类**加载时创建**实例，而不是等到第一次请求实例时创建
 
@@ -99,7 +107,7 @@ public interface Collection<E> extends Iterable<E> {
 
 
 
-## 懒汉单例
+### 懒汉单例
 
 在类加载的时候不创建单例实例，只有在第一次请求实例时创建
 
@@ -137,25 +145,81 @@ public interface Collection<E> extends Iterable<E> {
 
 
 
+## 生成器/建造者/构建器 Builder
+
+将一个复杂对象分解成多个相对简单的部分，然后根据不同需要分别创建它们，最后构建成该复杂对象。
 
 
 
 
-# 适配器模式 adapter
-
-两个不兼容的接口之间的桥梁,结合了两个独立接口的功能.这种模式涉及到一个单一的类，该类负责加入独立的或不兼容的接口功能。
 
 
 
-# 模板方法TemplateMethod
+# 结构型
 
-定义一个操作中的算法骨架，而**将算法的一些步骤延迟到子类**中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤。
+
+
+## 适配器模式 adapter
+
+两个不兼容的接口之间的桥梁.这种模式涉及到一个单一的类，负责加入独立的或不兼容的接口功能。
+
+
+
+
+
+## 桥接 Bridge
+
+将**抽象与实现分离**，使它们可以独立变化。**用组合代替继承**来实现，降低了抽象和实现这两个可变维度的耦合度。
+
+
+
+![image-20200907093847193](image.assets/image-20200907093847193.png)
+
+
+
+
+
+## 组合 Composite
+
+将对象组合成树状层次结构，使用户对单个对象和组合对象具有一致的访问性。
+
+![image-20200907094120213](image.assets/image-20200907094120213.png)
+
+
+
+
+
+## 装饰 Decorator
+
+动态的给对象增加一些职责，即增加其额外的功能。
+
+![image-20200907094246055](image.assets/image-20200907094246055.png)
+
+
+
+## 外观 Facade
+
+为多个复杂的子系统提供一个**一致的接口**，使这些子系统更加容易被访问。
+
+![image-20200907094406997](image.assets/image-20200907094406997.png)
+
+
+
+
+
+## 享元 Flyweight
+
+运用共享技术来有效地支持大量细粒度对象的复用。
+
+
 
 
 
 ## 代理Proxy
 
 为某对象提供一种代理以控制对该对象的访问。即客户端通过代理间接地访问该对象，从而限制、增强或修改该对象的一些特性。
+
+![image-20200907094607029](image.assets/image-20200907094607029.png)
 
 
 
@@ -167,6 +231,50 @@ public interface Collection<E> extends Iterable<E> {
 
 
 
+# 行为型
+
+
+
+## 职责链 Chain of Responsibility
+
+给多个对象处理请求的机会 ,减少发送者和接收者之间的耦合 ,把接收对象链接起来 ,在链中传递请求 ,直到请求被响应为止
+
+
+
+
+
+
+
+
+
+1. 策略（Strategy）模式：定义了一系列**封装算法**，使它们可以相互替换，算法的改变不影响使用算法的客户
+2. 命令（Command）模式：将一个请求封装为一个对象，从而可用不同的请求对客户进行参数化 ,将请求排队或记录请求日志 ,支持**可撤销**的操作 .使**发出请求的责任和执行请求的责任分离**。
+3. 职责链（
+4. 状态（State）模式：允许一个对象在其**内部状态改变时改变其行为**。
+5. 观察者（Observer）模式：多个对象间存在一对多关系，当**对象发生改变时，通知给其他对象**，从而影响其他对象的行为。
+6. 中介者（Mediator）模式：定义一个中介对象来简化原有对象之间的交互关系，使原有对象**不需要显式地互相调用** ,低耦合 ,还可以独立地改变对象间的交互。
+7. 迭代器（Iterator）模式：提供一种方法来顺序访问聚合对象中的一系列数据，而不暴露聚合对象的内部表示。
+8. 访问者（Visitor）模式：在不改变集合元素的前提下，为一个集合中的每个元素**提供多种访问方式**，从而在不改变个元素的类的前提下作用于这些元素的新操作。
+9. 备忘录（Memento）模式：在不破坏封装性的前提下，获取并保存一个对象的内部状态，以便以后恢复它。
+10. 解释器（Interpreter）模式：提供如何定义语言的文法，以及对语言句子的解释方法，即解释器。
+
+
+
+
+
+
+
+
+
+
+
+## 模板方法TemplateMethod
+
+定义一个操作中的算法骨架，而**将算法的一些步骤延迟到子类**中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤。
+
+
+
+###
 
 
 
@@ -190,47 +298,7 @@ public interface Collection<E> extends Iterable<E> {
 
 
 
-
-
-
-
-
-
-
-1. 原型（Prototype）模式：将一个对象作为原型，通过对其进行复制而**克隆**出多个和原型类似的新实例。
-
-3. 建造者（Builder）模式：将一个复杂对象分解成多个相对简单的部分，然后根据不同需要分别创建它们，最后构建成该复杂对象。
-3. 
-
-6. 桥接（Bridge）模式：将**抽象与实现分离**，使它们可以独立变化。它是**用组合关系代替继承**关系来实现，从而降低了抽象和实现这两个可变维度的耦合度。
-7. 装饰（Decorator）模式：动态的给对象增加一些职责，即增加其额外的功能。
-8. 外观（Facade）模式：为多个复杂的子系统提供一个一致的接口，使这些子系统更加容易被访问。
-9. 享元（Flyweight）模式：运用共享技术来有效地支持大量细粒度对象的复用。
-10. 组合（Composite）模式：将对象组合成树状层次结构，使用户对单个对象和组合对象具有一致的访问性。
-11. 策略（Strategy）模式：定义了一系列**封装算法**，使它们可以相互替换，算法的改变不影响使用算法的客户
-12. 命令（Command）模式：将一个请求封装为一个对象，从而可用不同的请求对客户进行参数化 ,将请求排队或记录请求日志 ,支持**可撤销**的操作 .使**发出请求的责任和执行请求的责任分离**。
-13. 职责链（Chain of Responsibility）：给多个对象处理请求的机会 ,减少发送者和接收者之间的耦合 ,把接收对象链接起来 ,在链中传递请求 ,直到请求被响应为止
-14. 状态（State）模式：允许一个对象在其**内部状态改变时改变其行为**。
-15. 观察者（Observer）模式：多个对象间存在一对多关系，当**对象发生改变时，通知给其他对象**，从而影响其他对象的行为。
-16. 中介者（Mediator）模式：定义一个中介对象来简化原有对象之间的交互关系，使原有对象**不需要显式地互相调用** ,低耦合 ,还可以独立地改变对象间的交互。
-17. 迭代器（Iterator）模式：提供一种方法来顺序访问聚合对象中的一系列数据，而不暴露聚合对象的内部表示。
-18. 访问者（Visitor）模式：在不改变集合元素的前提下，为一个集合中的每个元素**提供多种访问方式**，从而在不改变个元素的类的前提下作用于这些元素的新操作。
-19. 备忘录（Memento）模式：在不破坏封装性的前提下，获取并保存一个对象的内部状态，以便以后恢复它。
-20. 解释器（Interpreter）模式：提供如何定义语言的文法，以及对语言句子的解释方法，即解释器。
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+11. 
 
 
 
@@ -322,9 +390,9 @@ public interface Collection<E> extends Iterable<E> {
 
 
 
-## 类图关系
+## 类图
 
-
+描述一组类/接口/协作和它们之间的关系
 
 ![image-20200828171527248](image.assets/image-20200828171527248.png)
 
@@ -337,19 +405,119 @@ public interface Collection<E> extends Iterable<E> {
 
 
 
-include	
+## 对象图
 
-extend	执行一个用例 ,在需要时转向另一个用例 ,**执行完再返回**之前的用例
-
-
+描述一组对象及它们之间的关系	是对类图的静态快照
 
 
+
+**多重度**
+
+![image-20200906230619800](image.assets/image-20200906230619800.png)
+
+
+
+
+
+## 用例图
+
+
+
+* include	两个用例中提取出的公共行为 ,是包含关系
+
+* extend	执行用例时根据情况有不同的分支 ,可以将这个用例分为一个基本用例+若干个拓展用例 ,在需要时转向拓展用例 ,**执行完再返回**之前的用例
+
+* 泛化		多个用例共同拥有类似的结构和行为 ,将共性抽象为父用例 ,其他用例作为泛化的子用例
+
+
+
+![](image.assets/image-20200906225846809.png)
+
+学习课程和课程测试之前 ,都需要先检查权限 ,这是包含
+
+在课程测试中途可以选择充入学习币 ,这是拓展
+
+课程注册可以电话注册也可以网上注册,这是泛化
+
+
+
+
+
+## 顺序图/序列图
+
+
+
+
+
+
+
+
+
+## 活动图
+
+
+
+![image-20200906231024487](image.assets/image-20200906231024487.png)
+
+
+
+
+
+
+
+
+
+
+
+## 状态图
+
+![image-20200906231216567](image.assets/image-20200906231216567.png)
+
+与活动图类似 ,重点反映状态的转化		箭头上的注释也倾向于状态
+
+
+
+
+
+## 通信图
+
+与顺序图一样 ,是交互图
+
+顺序图强调时序 ,通信图强调**对象之间的组织结构**
+
+
+
+
+
+
+
+## 构件图
+
+描述一个封装的类和它的接口 ,端口 ,以及由内嵌的构建和连接件构成的内部结构
 
 
 
 ![image-20200906183533975](image.assets/image-20200906183533975.png)
 
 表示组件AccountManagement需要调用CreditCardServices组件和Logger 组件分别实现的Identity Verifier 接口和TransactionLogger 接口。
+
+
+
+
+
+
+
+## 部署图
+
+
+
+
+
+
+
+
+
+
 
 
 
