--- a/开发手册.md
+++ b/开发手册.md
@@ -262,6 +262,28 @@ initialDelayString同上的字符串形式。支持占位符
 
 
 
+# 跨域
+
+
+
+Request Method: OPTIONS		会在真实请求之前先用OPTIONS验证是否拥有跨域权限
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 # Environment类(Spring自身的类)
@@ -386,6 +408,23 @@ private void ensureCapacityInternal(int minCapacity) {
 在目录下进入cmd
 
 fsutil file createnew test.txt 字节数
+
+
+
+# adb命令
+
+adb logcat -c					清除日志
+adb logcat > D:\OPPOK5.txt	导出日志
+
+
+
+
+
+
+
+
+
+
 
 
 
