--- a/计算机网络.md
+++ b/计算机网络.md
@@ -366,7 +366,7 @@ bgcolor	文档整体背景颜色
 
 
 
-使用发送方的私钥签名	发送方的公钥验签
+使用**发送方的私钥签名**	发送方的公钥验签
 
 在使用发送方的私钥签名时 ,会生成信息摘要
 
@@ -440,7 +440,7 @@ bgcolor	文档整体背景颜色
 
 * 网络级防火墙
 
-​		包过滤	只检查数据源和目的地是否正确	安全性低
+​		包过滤	只检查**数据源和目的地的ip和端口**	安全性低
 
 ​		状态检测	依据**状态表** 
 
