--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -46,15 +46,25 @@
 
 ## 海明校验码
 
-奇偶校验 ,检错 ,**纠错**
+**多组**数位的奇偶校验 ,**纠错**
 
 在数据位后面增加一些比特 ,检验数据有效性
 
 **1个以上的校验位**
 
+为了保证能够纠错 ,码间最小距离3
+
 ​	2k-1>=n+k	k海明码个数 ,n数据位个数
 
 
+
+## 循环冗余校验码(CRC)
+
+在k位信息码后再拼接r位的校验码，长度为k+r位的编码，
+
+检错能力极强且开销小，易于用**编码器及检测电路**实现
+
+**不能纠错**
 
 
 
@@ -290,9 +300,17 @@ DMA(Direct Memory Access，直接内存存取)，允许**不同速度**的硬件
 
 
 
-控制器由
+控制器由程序计数器 ,指令寄存器 ,指令译码器 ,时序产生器和操作控制器组成
+
+控制器功能: 从内存中取出一条指令，并指出下一条指令在内存中的位置；对指令进行译码或测试，并产生相应的操作控制信号，以便启动规定的动作；**指挥并控制CPU、内存和输入输出设备之间数据的流动**
 
 
+
+程序计数器（PC)是专用寄存器，具有**寄存信息和计数**两种功能，又称为指令计数器，在程序开始执行前，将程序的起始地址送入PC,该地址在程序加载到内存时确定，。执行指令时，CPU将自动修改PC的内容，指向下一条指令的地址。当遇到转移指令时，后继指令的地址根据当前指令的地址加上一个向前或向后转移的位移量得到，或者根据转移指令给出 的直接转移的地址得到。
+
+
+
+Cpu由运算器 ,控制器 ,寄存器和内部总线组成
 
 
 
@@ -325,7 +343,7 @@ DMA(Direct Memory Access，直接内存存取)，允许**不同速度**的硬件
 
 信号量		特殊的变量
 
-### PV操作
+## PV操作
 
 p申请资源(排队中)         v释放资源   s信号量(剩余可用资源)
 
@@ -368,6 +386,30 @@ P(S2)申请产品进行消费		V(S1)唤醒生产
 ![image-20200827223828145](image.assets/image-20200827223828145.png)
 
 前驱图 ,只有等abc都完成了 ,d才能开始
+
+
+
+![image-20200911220034262](image.assets/image-20200911220034262.png)
+
+若用PV操作控制这几个进程并发执行的过程，则需要设置4个信号量SI、S2、S3 和S4,且信号量初值都等于零。下图中a和b应分别填写（25)，c和d应分别填写(26)。
+
+![image-20200911220041122](image.assets/image-20200911220041122.png)
+
+(25)A.P(S1) P(S2) 和 P(S3)     B.P(S1) P(S2) 和 V(S1)
+
+​    C.V(S1) V(S2) 和 P(S1)     D.V(S1) V(S2) 和 V(S3)
+
+(26)A.P(S1) P(S2) 和 P(S4)     B.P(S2) P(S3) 和 P(S4)
+
+C.V(S1) V(S2) 和 V(S4)     D.V(S2) V(S3) 和 V(S4)
+
+**【答案】C B**
+
+根据题意，进程P2、P3等待P1的结果，因此当P1执行完毕需要使用V操作通知 P2、P3,即 a 处填 V (SI) V (S2), b 处应填P (S1)。
+
+根据题意，进程P3要执行需要测试P1、P2有没有消息，故应该在c处填P (S2)、P (S3)。当P3执行完毕需要使用V操作通知P4，即在d处填P (S4)。
+
+
 
 
 
