--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -231,6 +231,14 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
+
+
+
+
+
+
+
+
 # 行为型
 
 
@@ -274,7 +282,11 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
-###
+## 观察者
+
+
+
+一个Subject类可以有多个 ConcreteSubject 子类，一个Observer 类也可以有多个ConcreteObserver 子类;一个Subject 对象可以对应多个Observer对象
 
 
 
