--- a/算法与数据结构.md
+++ b/算法与数据结构.md
@@ -284,9 +284,65 @@ C.a:3,b:3,c:3,d:3,e:3,f:2,g:3      D.a:2,b:6,c:3,d:5,e:6,f:1,g:4
 
 
 
+完全图
+
+​	每对顶点都有一条边相连的无向图
+
+​	每对顶点都有2条有向边互相连接的有向图
+
+![image-20200914071713776](image.assets/image-20200914071713776.png)
 
 
 
+
+
+## 图的存储
+
+
+
+### 邻接矩阵
+
+![](image.assets/邻接矩阵.png)
+
+**图有n个节点 ,就要用n*n的矩阵存储**
+
+表示上下三角时 ,耗费空间
+
+
+
+
+
+### 邻接表
+
+![image-20200914072817059](image.assets/image-20200914072817059.png)
+
+V1 ->2 6 -> 4 1
+
+代表V1 -> V2距离4 ,V1 -> V4距离1
+
+
+
+
+
+## 图的遍历
+
+![](image.assets/图的遍历.png)
+
+
+
+
+
+## 拓扑图 AOV网络
+
+用有向边表示活动的先后
+
+![](image.assets/图的拓扑排序.png)
+
+
+
+## 最小生成树
+
+![image-20200914074830349](image.assets/image-20200914074830349.png)
 
 
 
