--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -112,17 +112,15 @@ N = 尾数*基数^阶码
 
 将程序与内存划分为同样大小的块 ,以页单位将程序调入内存
 
+逻辑地址 = **页号** + 页内地址
 
-
-逻辑地址 = 页号 + 页内地址
-
-物理地址 = 页帧号 + 页内地址
+物理地址 = **页帧号** + 页内地址
 
 
 
 * 优点	页面长度固定 ,利用率高 ,碎片小 ,分配管理简单
 
-* 缺点	最后一页的零头无法被充分利用 ,增加系统开销 ,需要频繁调进调出 ,造成抖动现象
+* 缺点	最后一页的零头无法被充分利用 ,按固定大小模块拆分 ,会导致频繁调进调出 ,增加系统开销 ,造成抖动现象
 
 
 
@@ -214,9 +212,7 @@ N = 尾数*基数^阶码
 
 
 
-### 磁盘调度算法
-
-
+==磁盘调度算法==
 
 * 先来先服务 FCFS
 
@@ -224,13 +220,17 @@ N = 尾数*基数^阶码
 
 * 扫描算法 SCAN   也叫电梯算法 ,先从最里面到最外面 ,再从最外面到最里面      对于最外面和最里面不友好
 
-* 循环扫描 CSCAN    从最里到最外后 ,直接返回最里 ,是单边的循环
+* 循环扫描 CSCAN    只从里到外,到达最外圈时,直接返回,再次从里到外 ,是单边的循环
 
 先来先服务和最短寻道时间可能随时改变移动臂的方向
 
 
 
 读取数据时间 = 找磁道 +找扇区 + 传输时间
+
+
+
+
 
 
 
@@ -445,7 +445,49 @@ C.V(S1) V(S2) 和 V(S4)     D.V(S2) V(S3) 和 V(S4)
 
  
 
-# 作业 
+
+
+
+
+
+
+
+
+
+
+## 索引文件结构
+
+![](image.assets/索引文件结构.png)
+
+
+
+0-9 直接索引 ,存储10kb
+
+10 一级索引 ,4b一索引 ,存储256kb
+
+11 二级索引 ,存储256*256=64Mb
+
+![image-20200903224242745](image.assets/image-20200903224242745.png)
+
+地址按顺序存储
+
+总共13kb的索引节点,每个节点1kb,索引最小4b
+
+0-9的索引节点    采用直接索引 指向1kb的物理盘块,保存10kb内容     范围0-10239
+
+10节点,将1kb分成256个4b的索引,每个索引指向1kb的物理盘块,保存了256kb内容
+
+11节点,( 将1kb分成256个4b的索引)*2          保存了64mb
+
+12节点                                                 16gb
+
+
+
+
+
+
+
+# 作业
 
 ## 4个状态
 
@@ -465,25 +507,9 @@ C.V(S1) V(S2) 和 V(S4)     D.V(S2) V(S3) 和 V(S4)
 
 
 
-# 文件管理
 
 
 
-## 索引文件结构
-
-![](image.assets/索引文件结构.png)
-
-
-
-0-9 直接索引 ,存储10kb
-
-10 一级索引 ,4b一索引 ,存储256kb
-
-11 二级索引 ,存储256*256=64Mb
-
-![image-20200903224242745](image.assets/image-20200903224242745.png)
-
-地址按顺序存储
 
 
 
