--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -292,15 +292,34 @@ DMA(Direct Memory Access，直接内存存取)，允许**不同速度**的硬件
 
 
 
+![image-20200919110722563](image.assets/image-20200919110722563.png)
 
 
 
-
-由控制器 ,运算器 ,存储器 ,输入 ,输出设备组成
-
+==五大件==	控制器 ,运算器 ,存储器 ,输入 ,输出设备组成
 
 
-控制器由程序计数器 ,指令寄存器 ,指令译码器 ,时序产生器和操作控制器组成
+
+硬盘属于辅助存储器
+
+
+
+运算器
+
+* 算术逻辑单元ALU    负责算数/逻辑运算
+* 累加寄存器AC       为算数逻辑提供临时空间 ，暂存数据
+* 数据缓冲寄存器DR   写内存时，暂存指令或数据
+* 状态条件寄存器     存状态/控制标志
+
+
+
+控制器
+
+* 程序计数器PC    存放下一条指令地址
+* 指令寄存器IR     存放即将执行的指令
+* 地址寄存器AR    记录cpu当前访问的指令地址
+* 指令译码器      翻译指令
+* 时序部件        指令顺序
 
 控制器功能: 从内存中取出一条指令，并指出下一条指令在内存中的位置；对指令进行译码或测试，并产生相应的操作控制信号，以便启动规定的动作；**指挥并控制CPU、内存和输入输出设备之间数据的流动**
 
@@ -310,7 +329,41 @@ DMA(Direct Memory Access，直接内存存取)，允许**不同速度**的硬件
 
 
 
-Cpu由运算器 ,控制器 ,寄存器和内部总线组成
+**Cpu由运算器 ,控制器 ,寄存器和内部总线组成**
+
+
+
+
+
+# 计算机体系结构分类 Flynn
+
+
+
+![image-20200919114901092](image.assets/image-20200919114901092.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
