--- a/程序设计语言+软件开发.md
+++ b/程序设计语言+软件开发.md
@@ -760,15 +760,12 @@ PAD ,程序流程图 ,N/S盒图	三者可以互相转化 ,都用于分析问题
 
 ## 过程改进	软件成熟度CMMI
 
-* 初始级
-
-* 可管理级	纪律化的过程
-
-* 已定义级	标准一致的过程
-
-* 定量管理级	可预测的过程
-
-* 优化管理级	不断改进
+* 0 未完成级
+* 1 初始级
+* 2 可管理级	纪律化的过程
+* 3 已定义级	标准一致的过程
+* 4 定量管理级	可预测的过程
+* 5 优化管理级	不断改进
 
 
 
