--- a/算法与数据结构.md
+++ b/算法与数据结构.md
@@ -45,11 +45,17 @@
 
 
 * 顺序表
-
 * 单链表
 
-* 循环链表
+若对一个链表最常用的操作是在末尾插入结点和删除尾结点，则采用仅设尾指针的单向循环链表（不含头结点）时，插入操作的时间复杂度为O(1),删除操作的时间复杂度为O(n)
 
+ 
+
+![http://www.rkpass.cn:8080/ruankao_work_version_0103/userfile/image/rj_10_s_s_65_1.jpg](image.assets/clip_image001.jpg)
+
+要删除尾指针所指结点，必须通过遍历操作找到尾结点的前驱结点
+
+* 循环链表
 * 双向链表
 
 ![image-20200831160443138](image.assets/image-20200831160443138.png)
@@ -114,15 +120,9 @@ tail ( LS1 ) = (b,c) ,(d,e)
 
 ## 查找二叉树
 
-**左孩子小于根	右孩子大于根**
+插入的关键字大于树根，则插入到右子树上，若小于树根，则插入到左子树上，若为空树，则作为树根结点
 
-
-
-* 插入结点时
-
-结点已存在 ,不插入
-
-插入结点与父结点比较 ,就能知道在左还是右
+结点已存在则不插入
 
 * 删除结点时
 
