--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -98,6 +98,54 @@ N = 尾数*基数^阶码
 
 
 
+# 校验码
+
+
+
+## 码距
+
+两个码之间**变化最小**的二进制位数为码距
+
+01->10	变化2位 ，码距2		0->1	码距1
+
+
+
+![image-20201004100508843](image.assets/image-20201004100508843.png)
+
+并不是4	而是考虑最小
+
+
+
+## 奇偶校验	
+
+若干位有效信息 ,再加上一个二进制位(校验位)组成校验码
+
+==奇校验	有效信息+校验位中 ,1出现奇数次==
+
+**只能检查1位的错误**
+
+
+
+## 循环校验码CRC
+
+在k位信息码之后拼接r位校验码 ,利用了**模2除法**进行校验
+
+只能检错 **,不能纠错**
+
+![image-20201004101841660](image.assets/image-20201004101841660.png)
+
+将余数拼接到后面 ,再次进行除法 ,如果仍能除尽 ,则正确
+
+![image-20201004102123297](image.assets/image-20201004102123297.png)
+
+
+
+## 海明码	能纠错
+
+2^r >= m +r +1
+
+r 校验位		m数据位
+
 
 
 
@@ -132,6 +180,24 @@ N = 尾数*基数^阶码
 
 
 
+
+
+
+某进程有5个页面，页号为0〜4,页面变换表如下所示。表中状态位等于0和1分 别表示页面不在内存或在内存。若系统给该进程分配了3个存储块，当访问的页面3不在内存时，应该淘汰表中页号为（25）的页面。假定页面大小为4KB，逻辑地址为十六进制2C25H,该地址经过变换后，其物理地址应为十六进制（26)。
+
+![img](image.assets/clip_image002.jpg)
+
+(25)A.0       B.1       C.2       D.4
+
+(26)A.2C25H     B.4096H     C.4C25H     D.8C25H
+
+**【答案】A C**
+
+**【解析】**
+
+根据题意，页面变换表中状态位等于0和1分别表示页面不在内存或在内存，所以0、2和4号页面在内存。当访问的页面3不在内存时，系统应该首先淘汰未被访问的页面，因为根据程序的局部性原理，最近未被访问的页面下次被访问的概率更小；如果页面最近都被访问过，应该先淘汰未修改过的页面。因为未修改过的页面内存与辅存一致，故淘汰时无需写回辅存，使系统页面置换代价小。经上述分析，0、2和4号页面都是最近被访问过的，但2和4号页面都被修改过而0号页面未修改过，故应该淘汰0号页面。
+
+  (26) 根据题意，页面大小为4KB，逻辑地址为十六进制2C25H 其页号为2,页内地址为C25H，查页表后可知页帧号（物理块号）为4,该地址经过变换后，其物理地址应为页帧号4拼上页内地址C25H，即十六进制4C25H。
 
 
 
@@ -308,24 +374,20 @@ DMA(Direct Memory Access，直接内存存取)，允许**不同速度**的硬件
 
 * 算术逻辑单元ALU    负责算数/逻辑运算
 * 累加寄存器AC       为算数逻辑提供临时空间 ，暂存数据
-* 数据缓冲寄存器DR   写内存时，暂存指令或数据
+* ==数据缓冲寄存器DR==   写内存时，暂存指令或数据
 * 状态条件寄存器     存状态/控制标志
 
 
 
 控制器
 
-* 程序计数器PC    存放下一条指令地址
-* 指令寄存器IR     存放即将执行的指令
+* 程序计数器PC    存放下条指令地址
+* 指令寄存器IR     存放正在执行的指令
 * 地址寄存器AR    记录cpu当前访问的指令地址
 * 指令译码器      翻译指令
 * 时序部件        指令顺序
 
-控制器功能: 从内存中取出一条指令，并指出下一条指令在内存中的位置；对指令进行译码或测试，并产生相应的操作控制信号，以便启动规定的动作；**指挥并控制CPU、内存和输入输出设备之间数据的流动**
-
-
-
-程序计数器（PC)是专用寄存器，具有**寄存信息和计数**两种功能，又称为指令计数器，在程序开始执行前，将程序的起始地址送入PC,该地址在程序加载到内存时确定，。执行指令时，CPU将自动修改PC的内容，指向下一条指令的地址。当遇到转移指令时，后继指令的地址根据当前指令的地址加上一个向前或向后转移的位移量得到，或者根据转移指令给出 的直接转移的地址得到。
+先把指令从内存储器取到**缓冲寄存器DR**中，再送入**指令寄存器IR**暂存，**指令译码器**根据IR的内容产生各种微操作指令，控制其他的组成部件工作
 
 
 
@@ -335,7 +397,7 @@ DMA(Direct Memory Access，直接内存存取)，允许**不同速度**的硬件
 
 
 
-# 计算机体系结构分类 Flynn
+## 计算机体系结构分类 Flynn
 
 
 
@@ -343,6 +405,134 @@ DMA(Direct Memory Access，直接内存存取)，允许**不同速度**的硬件
 
 
 
+# 层次化存储结构
+
+
+
+* CPU	寄存器		最快 ,容量小 ,成本高
+* cache高速缓存      按内容存取
+
+* 内存/主存	随机存储器RAM		只读存储器ROM
+
+* 外存	硬盘/U盘
+
+从上到下速度变慢
+
+
+
+## Cache
+
+
+
+cache通过程序的**局部性原理** ,改善系统性能
+
+* 时间局部性 :	刚刚被访问过的内容可能还会被访问
+
+* 空间局部性 :										旁边的地址可能被访问(可以防止抖动)
+
+==命中率==
+
+"cache+主存储器"周期 = h乘以cache周期 + (1-h)*主存储器周期
+
+而h为命中率	1-h为失效率(没命中缓存,去命中主存)
+
+
+
+==映像==
+
+* 直接相联映像	硬件电路简单 ,**冲突率高**
+
+![](image.assets/直接相联.png)
+
+主存只能固定地存储在cache中
+
+之后放入的主存16页 ,将顶替cache0页上的主存0页 ,造成冲突而0页可能在后续被再次调用 ,会造成抖动
+
+**主存标记+cache页号+业内地址**
+
+
+
+* 全相联映像	电路难实现 ,只适合小cache ,冲突率低
+
+![](image.assets/全相联映像.png)
+
+主存可以放在cache的任意页
+
+**主存标记+业内地址**
+
+
+
+* 组相联映像		直接相联和全相联的**折中**
+
+![](image.assets/组相联.png)
+
+先分区 ,后分组
+
+==同组之间使用全相联映像==
+
+cache组号+组内页号+页内地址
+
+
+
+* 地址映像	将主存和cache划分为若干大小相同的页(块)
+
+
+
+## 主存
+
+
+
+## 编址与计算
+
+
+
+按字编址	存储单元是字
+
+按字节编址	存储单元字节
+
+
+
+所需芯片数=总容量/芯片容量
+
+
+
+![](image.assets/QQ拼音截图20201003203621.png)
+
+400H =2^10
+
+又因为存储单元为16位
+
+总容量=2^10*16bit
+
+芯片容量=2^10*16bit/4
+
+
+
+# 总线
+
+
+
+一条主线同一时刻只允许**一个设备发送** ,但允许**多个设备接收**
+
+
+
+* 数据总线	在CPU和RAM之间传输数据
+
+* 地址总线	指定在RAM中存储的数据的地址
+
+* 控制总线	将微处理器控制单元的信号传送到周边设备
+
+
+
+## 并联串联
+
+
+
+
+
+![image-20201004095929871](image.assets/image-20201004095929871.png)
+
+并联	R=1-（1-R1）*（1-R2）......
 
 
 
@@ -352,16 +542,56 @@ DMA(Direct Memory Access，直接内存存取)，允许**不同速度**的硬件
 
 
 
+# 指令
 
 
 
+一条指令就是机器语言中的一个语句
+
+![image-20200926222941460](image.assets/image-20200926222941460.png)
+
+指令由操作码+地址码字段组成
+
+操作码决定操作类型(加减乘除)
+
+地址码决定操作数的位置
+
+![image-20200926225238911](image.assets/image-20200926225238911.png)
+
+a+b=c	3地址
+
+a+=b	2地址
+
+a++		1地址
+
+无需操作数	0地址
 
 
 
+## 寻址方式
 
 
 
+* 立即寻址	指令存放操作数	速度快,灵活性差
 
+* 直接寻址					操作数地址
+
+  间接寻址								地址的地址
+
+  寄存器寻址	寄存器存放操作数
+
+  寄存器间接寻址						的地址
+
+
+
+# CISC/RISC
+
+
+
+| 指令系统类型 | 指令                                                         | 寻址方式     | 实现方式                                                   | 其他                      |
+| ------------ | ------------------------------------------------------------ | ------------ | ---------------------------------------------------------- | ------------------------- |
+| CISC 复杂    | 指令多,使用频率差别大,不定长格式                             | 支持多种寻址 | 微程序控制技术(微码)                                       | 研制周期长                |
+| RISC 精简    | 指令少,使用频率接近,定长,多为**单周期指令**,操作**寄存器**,只有Load/Store操作内存 | 寻址单一     | 增加了通用寄存器(累加器),硬布线逻辑控制为主,适合采用流水线 | 优化编译,**支持高级语言** |
 
 
 
@@ -589,6 +819,32 @@ C.V(S1) V(S2) 和 V(S4)     D.V(S2) V(S3) 和 V(S4)
 ## 虚设备与SPOOLING假脱机技术
 
 SPOOLING是关于慢速字符设备如何与计算机主机交换信息的一种技术 ,通过**磁盘**实现
+
+
+
+# 流水线
+
+
+
+将指令的执行过程分为**取址,分析,执行**3步
+
+
+
+## 超标量流水线
+
+![](image.assets/超标量流水线.png)
+
+度为流水线条数		度为2的超标量流水线能同时执行2个操作
+
+
+
+## 吞吐率   单位时间内流水线完成的数量
+
+
+
+吞吐率TP=指令条数/执行时间
+
+最大吞吐率=1/流水线周期
 
 
 
