--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -364,6 +364,38 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
+# 面向对象的软件开发
+
+
+
+* 面向对象分析
+
+抽取和整理用户需求并建立问题域精确模型
+
+**认定对象、组织对象、描述对象间的相互作用、定义对象的操作、定义对象的内部信息**
+
+认定对象是指：在应用领域中，按自然存在的实体确立对象
+
+组织对象含义是：分析对象间的关系，将相关对象抽象成类
+
+描述对象间的相互作用是：描述出各对象在应用系统中的关系
+
+* 面向对象设计
+
+采用协作的对象、对象的属性和方法说明软件解决方案的一种方式，强调定义软件对象和这些软件对象如何协作来满足需求，延续了面向对象分析。
+
+* 面向对象实现
+
+釆用面向对象程序设计语言实现系统
+
+* 面向对象测试
+
+根据规范说明来验证系统设计的正确性。
+
+
+
+==面向对象允许多继承==
+
 
 
 # UML
