--- a/计算机网络.md
+++ b/计算机网络.md
@@ -388,7 +388,7 @@ bgcolor	文档整体背景颜色
 
 证书包含版本、序列号、签名算法标识符、签发人姓名、有效期、主体名和主体公钥信息等并附有CA的签名，**用户获取网站数字证书后通过CA签名**来确认数字证书的有效性，从而验证网站的真伪。
 
-用户发送数据时使用网站的公钥加密（从数字证书中获得）,收到数据时使用网站的公钥验证网站数字签名，网站用私钥签名和对收到的消息解密。
+用户发送数据时使用网站的==公钥加密==（从数字证书中获得）,收到数据时使用网站的==公钥验证签名==，网站用==私钥签名/解密==。
 
 
 
