--- a/计组原+操作系统.md
+++ b/计组原+操作系统.md
@@ -270,7 +270,7 @@ r 校验位		m数据位
 
 
 
-存取时间 = 寻道时间 + 等待时间
+存取时间 = 寻道时间 + 旋转延迟时间 + 等待时间
 
 寻道时间	磁头移动到磁道
 
@@ -381,7 +381,7 @@ DMA(Direct Memory Access，直接内存存取)，允许**不同速度**的硬件
 
 控制器
 
-* 程序计数器PC    存放下条指令地址
+* 程序计数器PC    存放下条指令地址 ==唯一能被人为访问==
 * 指令寄存器IR     存放正在执行的指令
 * 地址寄存器AR    记录cpu当前访问的指令地址
 * 指令译码器      翻译指令
@@ -508,6 +508,18 @@ cache组号+组内页号+页内地址
 
 
 
+# 主机与外设间进行数据传输的输入输出控制方法
+
+* 程序控制方式，由**CPU**执行程序控制数据的输入输出过程。
+
+* 中断方式下，**外设**准备好输入数据或接收数据时向CPU发出**中断请求信号**，若CPU决定响应该请求，则暂停正在执行的任务，转而执行中断服务程序进行数据的输入输出处理，之后再回去执行原来被中断的任务。
+
+* DMA方式下，CPU向**DMA控制器**下达指令，让DMA控制器来处理数据的传送，数据传送完毕再把信息反馈给CPU,减轻了CPU的负担
+
+
+
+
+
 # 总线
 
 
@@ -521,6 +533,12 @@ cache组号+组内页号+页内地址
 * 地址总线	指定在RAM中存储的数据的地址
 
 * 控制总线	将微处理器控制单元的信号传送到周边设备
+
+
+
+==若内存容量为4GB，字长为32,则 地址总线和数据总线的宽度都为32==
+
+
 
 
 
@@ -565,6 +583,14 @@ a+=b	2地址
 a++		1地址
 
 无需操作数	0地址
+
+
+
+## 伪指令
+
+伪指令语句用于指示汇编程序如何汇编源程序，常用于为汇编程序提供以下信息：该源程序如何分段，有哪些逻辑段在程序段中，哪些是当前段，它们分别由哪个段寄存器指向；定义了哪些数据，存储单元是如何分配的等。
+
+伪指令语句除==定义的具体数据要生成目标代码==外，==其他不生成目标代码==。伪指令语句的这些命令功能是由汇编程 序在汇编源程序时，通过执行一段程序来完成的，而不是在运行目标程序时实现的。
 
 
 
@@ -691,6 +717,44 @@ C.V(S1) V(S2) 和 V(S4)     D.V(S2) V(S3) 和 V(S4)
 根据题意，进程P2、P3等待P1的结果，因此当P1执行完毕需要使用V操作通知 P2、P3,即 a 处填 V (SI) V (S2), b 处应填P (S1)。
 
 根据题意，进程P3要执行需要测试P1、P2有没有消息，故应该在c处填P (S2)、P (S3)。当P3执行完毕需要使用V操作通知P4，即在d处填P (S4)。
+
+
+
+
+
+
+
+
+
+进程P1、P2、P3、P4和P5的前趋图如下：
+
+若用PV操作控制进程P1〜P5并发执行的过程，则需要设置6个信号量S1、S2、S3.S4.S5和S6,且信号量S1〜S6的初值都等于零。下图中a和b处应分别填写 (23)： c和d处应分别填写（24) , e和f处应分别填写（25)。
+
+![img](image.assets/clip_image002-1601951696553.jpg)
+
+![img](image.assets/clip_image004.jpg)
+
+(23)A.P(S1) P(S2)和 P(S3)P(S4)   B.P(S1) V(S2)和 P(S2) V(S1) 
+
+​    C.V(S1) V(S2)和 V(S3) V(S4)   D.P(S1) P(S2)和 V(S1) V(S2)
+
+(24)A.P(S1) P(S2)和 V(S3) V(S4)   B.P(S1) P(S3)和 V(S5) V(S6) 
+
+C.V(S1) V(S2)和 P(S3) P(S4)   D.P(S1) V(S3)和 P(S2) V(S4)
+
+(25)A.P(S3) P(S4)和 V(S5)V(S6)   B.V(S5) V(S6)和 P(S5) P(S6)
+
+C.P(S2) P(S5)和 P(S4) P(S6)   D.P(S4) V(S5)和 P(S5) V(S6)
+
+**【答案】C B C**
+
+**【解析】本题考査PV操作方面的基本知识。**
+
+试题（23)的正确答案是C，因为P1是P3和P4的前驱，当P1执行完成后，应通知P3和P4，故应采用V(S1) V(S2)操作分别通知P3和P4;同理，P2是P3和P5的前驱，当P2执行完后，应通知P3和P5,故应采用V(S3)V(S4)操作分别通知P3和P5。
+
+试题（24)的正确答案是B,因为P3是P1和P2的后继，当P3执行前应测试P1 和P2是否执行完，故应采用P(S1) P(S3)操作分别测试P1和P2是否执行完；又因为P3是P4和P5的前驱，当P3执行完应通知P4和P5,故应采用V(S5)V(S6)操作分别通知 P4 和 P5。
+
+试题（25)的正确答案是C,因为P4是P1和P3的后继，当P4执行前应测试P1和P3是否执行完，故应采用P(S2) P(S5)操作分别测试P1和P3是否执行完；又因为P5是P2和P3的前驱的后继，当P5执行前应测试P2和P3是否执行完,故应采用P(S4) P(S6) 操作分别测试P2和P3是否执行完。
 
 
 
@@ -847,4 +911,13 @@ SPOOLING是关于慢速字符设备如何与计算机主机交换信息的一种
 最大吞吐率=1/流水线周期
 
 
+
+# 冗余技术
+
+冗余是指对于实现系统规定功能是多余的那部分资源，包括硬件、软件、信息和时间。
+
+* 结构冗余，按其工作方法可以分为静态、动态和混合冗余
+* 信息冗余，指的是为了检测或纠正信息在运算或传输中的错误另外加的一部分信息
+* 时间冗余，是指以重复执行指令或程序来消除瞬时错误带来的影响；
+* 冗余附件技术，是指为实现上述冗余技术所需的资源和技术
 
