--- a/软件设计师/多媒体+知识产权.md
+++ b/软件设计师/多媒体+知识产权.md
@@ -202,6 +202,12 @@ kHz	而选项都是kb ,所以无需转化为更小的单位
 
 
 
+
+
+李某在某软件公司兼职，为完成该公司交给的工作，做出了一项涉及计算机程序的发明。李某认为该发明是自己利用业余时间完成的，可以个人名义申请专利。关于此项发明的专利申请权应归属		李某兼职的软件公司
+
+
+
 # 侵权判定
 
 
