--- a/面向对象+设计模式.md
+++ b/面向对象+设计模式.md
@@ -260,7 +260,6 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 3. 职责链（
 4. 状态（State）模式：允许一个对象在其**内部状态改变时改变其行为**。
 5. 观察者（Observer）模式：多个对象间存在一对多关系，当**对象发生改变时，通知给其他对象**，从而影响其他对象的行为。
-6. 中介者（Mediator）模式：定义一个中介对象来简化原有对象之间的交互关系，使原有对象**不需要显式地互相调用** ,低耦合 ,还可以独立地改变对象间的交互。
 7. 迭代器（Iterator）模式：提供一种方法来顺序访问聚合对象中的一系列数据，而不暴露聚合对象的内部表示。
 8. 访问者（Visitor）模式：在不改变集合元素的前提下，为一个集合中的每个元素**提供多种访问方式**，从而在不改变个元素的类的前提下作用于这些元素的新操作。
 9. 备忘录（Memento）模式：在不破坏封装性的前提下，获取并保存一个对象的内部状态，以便以后恢复它。
@@ -282,13 +281,9 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
-## 观察者
+## 观察者 Observer
 
-
-
-一个Subject类可以有多个 ConcreteSubject 子类，一个Observer 类也可以有多个ConcreteObserver 子类;一个Subject 对象可以对应多个Observer对象
-
-
+一个观察者（Observer)观察一个被观察者（Subject)，**被观察者可以被多个观察者关注** ,Subject的状态发生变化时，Subject将通知所有的Observer，告知状态已经发生了变化，而Observer收到通知后，将查询Subject 的状态
 
 
 
@@ -296,9 +291,9 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
+## 中介者	Mediator
 
-
-
+定义中介对象**简化原有对象之间的交互**，使原有对象**不需要显式地互相调用** ,使各个对象间的耦合松散，==只需关心和Mediator的关系，使多对多的关系变成了一对多的关系==，可以降低系统的复杂性，提髙可修改扩展性
 
 
 
@@ -310,7 +305,11 @@ ConcretePrototype具体原型类 ,实现具体的克隆方法
 
 
 
-11. 
+
+
+
+
+
 
 
 
